# konfik

./: .gitignore  README.md  config.toml  coverage.xml  example.py  example_config.env  example_config.toml  example_usage.py  konfetti.py  makefile  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: python_package.yml  python_publish.yml  pythonpackage.yml
examples/: config.env  config.json  config.yaml  example_env.py  example_json.py  example_toml.py  example_yaml.py
konfik/: __init__.py  example_yaml.py  main.py
scripts/: update.py
tests/: conftest.py  test_konfik.py
