[tool.poetry]
name = "konfik"
version = "0.1.5"
description = ""
authors = ["rednafi <redowan.nafi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
rich = "^8.0.0"
toml = "^0.10.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.20.1"
black = "^20.8b1"
isort = "^5.6.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
konfik = 'konfik.main:deploy_cli'

# linters
[tool.black]
l = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
