# Package manager metadata
[tool.poetry]
name = "konfik"
version = "2.0.5"
description = "The Strangely Familiar Config Parser"
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rednafi/konfik"
repository = "https://github.com/rednafi/konfik"
keywords = ["config", "configuration", "toml", "dotenv", "yaml"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
python-dotenv = "^0.15.0"
PyYAML = "^5.3.1"
Pygments = "^2.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
tox = "^3.21.4"
black = "^20.8b1"
pytest-cov = "^2.11.1"
isort = "^5.7.0"

# CLI entrypoints
[tool.poetry.scripts]
konfik = "konfik:cli_entrypoint"

# Third-party configs
[tool.black]
line-length = 88

[tool.isort]
profile = "black"
atomic = true

[tool.tox]
legacy_tox_ini = """
# content of: tox.ini , put in same dir as setup.py
[tox]
envlist = py36,py37,py38,py39
isolated_build = True

[testenv]
# install pytest in the virtualenv where commands will be executed
deps = pytest
install_commands =
    curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
    poetry install --no-dev
commands =
    # NOTE: you can run any command line tool here - not just tests
    pytest -v -s
"""

# PEP-518: build-requires
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
